--- a/news1.html
+++ b/news1.html
@@ -1,33 +1,19 @@
-<!-- this !DOCTYPE html is used to define HTML file -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- this meta links are here by default -->
-    <!-- to be short, it is used to define characters, content scale and etc. -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- the title is used for web page's title -->
     <title>News Page</title>
-    <!-- css file imported into web-page  -->
     <link rel="stylesheet" href="style/style.css">
-    <!-- these links are used to connect font from google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- this link is used to connect specific font called 'Bodoni Moda' -->
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&display=swap" rel="stylesheet">
-    <!-- css code in web-page  -->
     <style>
         body {
-            /* if there wouldn't be no links for fonts, this stroke wouldn't work */
-            font-family: 'Bodoni Moda';
-            /* this color were picked by used Google Color Picker */
-            background-color: #f0e7db;
+        font-family: 'Arial';
+        background-color: #f0e7db;
         }
     </style>
 </head>
 <body>
-    <!-- this div has class because it is styled in css file -->
     <div class="title_of_the_page">
         <a href="index.html"><h1>NEWS PAGE</h1></a>
     </div>
@@ -35,14 +21,16 @@
     <div class="news_page">
         <img src="img/news1.webp" alt="">
         <h2>Trump, Reacting to Pending Jan. 6 Subpoena, Repeats Election Lies in Letter</h2>
-        <p>In a rambling, 14-page restatement of false claims and conspiracy theories, the former president did not indicate whether he would testify before the House panel investigating the Capitol riot.</p><br>
-        <p>WASHINGTON — Former President Donald J. Trump responded on Friday to a promised subpoena from the House committee investigating the Jan. 6 assault with a lengthy, rambling letter that attacked the panel’s work, reiterated false claims of widespread voting fraud and presaged a potentially bruising battle over whether he could be compelled to testify about his role in the riot and his efforts to subvert the 2020 election.</p><br>
-        <p>In a 14-page missive that did not address whether he would comply with the subpoena, Mr. Trump perpetuated the same lies that had fueled the attack and boasted about the size of the crowd that had amassed to hear him speak before marching to the Capitol and staging a violent siege.</p><br>
-        <p>The former president has indicated privately to aides that he would be willing to testify to the House panel but would like to do so live, according to a person close to him, a prospect that would prevent video of him from being clipped or edited in a manner he dislikes. The letter he released on Friday — a conspiracy theory-filled rehash of his many grievances and false assertions — underscored the risks for the committee of giving Mr. Trump an unfettered public platform.</p><br>
-        <p>“The presidential election of 2020 was rigged and stolen!” the letter began in all capital letters.</p><br>
-        <p>Mr. Trump dedicated page after page to repeating that lie about the 2020 election, which he lost to President Biden, a fact he has repeatedly refused to acknowledge.</p><br>
-        <p>“You have not gone after the people that created the fraud, but rather great American patriots who questioned it, as is their constitutional right,” Mr. Trump wrote in the screed. “These people have had their lives ruined as your committee sits back and basks in the glow.”</p><br>
-        <p>Instead of providing what he claimed was evidence, he included appendices filled with assertions of widespread election irregularities that have been debunked, some by his own former attorney general, William P. Barr, and other top Justice Department officials.</p><br>
+        <p id="newsonetext">In a rambling, 14-page restatement of false claims and conspiracy theories, the former president did not indicate whether he would testify before the House panel investigating the Capitol riot.<br><br>
+            WASHINGTON — Former President Donald J. Trump responded on Friday to a promised subpoena from the House committee investigating the Jan. 6 assault with a lengthy, rambling letter that attacked the panel’s work, reiterated false claims of widespread voting fraud and presaged a potentially bruising battle over whether he could be compelled to testify about his role in the riot and his efforts to subvert the 2020 election.<br><br>
+            In a 14-page missive that did not address whether he would comply with the subpoena, Mr. Trump perpetuated the same lies that had fueled the attack and boasted about the size of the crowd that had amassed to hear him speak before marching to the Capitol and staging a violent siege.<br><br>
+            The former president has indicated privately to aides that he would be willing to testify to the House panel but would like to do so live, according to a person close to him, a prospect that would prevent video of him from being clipped or edited in a manner he dislikes. The letter he released on Friday — a conspiracy theory-filled rehash of his many grievances and false assertions — underscored the risks for the committee of giving Mr. Trump an unfettered public platform.<br><br>
+            “The presidential election of 2020 was rigged and stolen!” the letter began in all capital letters.<br><br>
+            Mr. Trump dedicated page after page to repeating that lie about the 2020 election, which he lost to President Biden, a fact he has repeatedly refused to acknowledge.<br><br>
+            “You have not gone after the people that created the fraud, but rather great American patriots who questioned it, as is their constitutional right,” Mr. Trump wrote in the screed. “These people have had their lives ruined as your committee sits back and basks in the glow.”<br><br>
+            Instead of providing what he claimed was evidence, he included appendices filled with assertions of widespread election irregularities that have been debunked, some by his own former attorney general, William P. Barr, and other top Justice Department officials.<br><br></p>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
