--- a/news3.html
+++ b/news3.html
@@ -1,33 +1,19 @@
-<!-- this !DOCTYPE html is used to define HTML file -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- this meta links are here by default -->
-    <!-- to be short, it is used to define characters, content scale and etc. -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- the title is used for web page's title -->
     <title>News Page</title>
-    <!-- css file imported into web-page  -->
     <link rel="stylesheet" href="style/style.css">
-    <!-- these links are used to connect font from google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- this link is used to connect specific font called 'Bodoni Moda' -->
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&display=swap" rel="stylesheet">
-    <!-- css code in web-page  -->
     <style>
         body {
-            /* if there wouldn't be no links for fonts, this stroke wouldn't work */
-            font-family: 'Bodoni Moda';
-            /* this color were picked by used Google Color Picker */
-            background-color: #f0e7db;
+        font-family: 'Arial';
+        background-color: #f0e7db;
         }
     </style>
 </head>
 <body>
-    <!-- this div has class because it is styled in css file -->
     <div class="title_of_the_page">
         <a href="index.html"><h1>NEWS PAGE</h1></a>
     </div>
@@ -47,14 +33,6 @@
         
         <p><strong>The Boy Who Dreamed Dragons by Caryl Lewis, illustrated by Carmen Saldana, Puffin, £12.99</strong>
         <br>Albie dreams dragons – fiery dragons, water dragons, even book dragons. They’re always with him, keeping him company, but no one else can see them … until he meets a very special person. This lovely picture book about imaginary friends, inner life and overcoming rejection is ideal for imaginative kids off to school.</p><br>
-        <p></p><br>
-        <p></p><br>
-        <p></p><br>
-        <p></p><br>
-        <p></p><br>
-        <p></p><br>
-        <p></p><br>
-        <p></p><br>
     </div>
 </body>
 </html>
